add: OpneAPIの修正をgeneratorで適応
